objects/TM_Treasury_Application_Product_Account__c.object
<CustomObject>
    <fields>
        <fullName>TM_Account_Daily_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Daily Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Peg_Balance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Peg Balance</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Primary_Child_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary (Child) Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Secondary_Parent_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary (Parent) Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Treasury_Application_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Application Product</label>
        <referenceTo>TM_Treasury_Application_Product__c</referenceTo>
        <relationshipLabel>Treasury Application Product Accounts</relationshipLabel>
        <relationshipName>Treasury_Application_Product_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Treasury Application Product Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Product Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Application Product Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>